--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,10 @@ edition = "2021"
 
 [dependencies]
 bevy = { version = "0.13.0", features = ["dynamic_linking"] }
-uuid = { version = "1.7.0", features = ["v4"]}
+uuid = { version = "1.7.0", features = ["v4"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = { version = "1.0" }
+walkdir = { version = "2.3" }
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
