--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ uuid = { version = "1.7.0", features = ["v4"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
 walkdir = { version = "2.3" }
+bevy_prototype_lyon = { version = "0.11.0" }
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
