--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = { version = "0.13.0", features = ["dynamic_linking"] }
+bevy = { version = "0.13.0" }
 uuid = { version = "1.7.0", features = ["v4"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
