--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
 walkdir = { version = "2.3" }
 bevy_prototype_lyon = { version = "0.11.0" }
+itertools = { version = "0.13.0" }
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
