--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ reqwest = { version = "0.12.4", features = ["blocking", "json"] }
 tokio = { version = "1" }
 tracing = { version = "0.1" }
 tracing-subscriber = { version = "0.3.18" }
+webbrowser = { version = "1.0.1" }
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
