--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ tokio = { version = "1" }
 tracing = { version = "0.1" }
 tracing-subscriber = { version = "0.3.18" }
 webbrowser = { version = "1.0.1" }
+bevy-steamworks = { version = "0.11.0" }
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
