--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ uuid = { version = "1.7.0", features = ["v4"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = { version = "1.0" }
 walkdir = { version = "2.3" }
-bevy_prototype_lyon = { version = "0.11.0" }
+bevy_prototype_lyon = { version = "0.12.0" }
 itertools = { version = "0.13.0" }
 reqwest = { version = "0.12.4", features = ["blocking", "json"] }
 tokio = { version = "1" }
@@ -19,6 +19,7 @@ tracing = { version = "0.1" }
 tracing-subscriber = { version = "0.3.18" }
 webbrowser = { version = "1.0.1" }
 bevy-steamworks = { version = "0.11.0" }
+dirs = { version = "5.0.1" }
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
